# cnami

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CnamiConfig.h.in  cnami.c  diff.c  diff.h  io_utils.c  io_utils.h  rvect.c  rvect.h  utils.c
